# Wenderer

./: .gitignore  Cargo.toml  README.md  build.rs  wasm_build.sh  wasm_build_release.sh
src/: data.rs  geometries.rs  lib.rs  main.rs  rendering.rs  shading.rs  utils.rs
src/shaders/: canvas.frag  canvas.frag.spv  canvas.vert  canvas_shader.wgsl  challenge.frag  challenge.frag.spv  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv  shader3d.wgsl  vanilla.frag  vanilla.frag.spv  vanilla.vert  vanilla.vert.spv
src/shaders/deprecated_glsl_shaders/: canvas.frag.spv
