[package]
name = "wenderer"
version = "0.5.1"
authors = ["feng liang <feng.liang@kaust.edu.sa>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25"
winit = { version = "0.30", features = ["rwh_05"] }
cgmath = { version = "0.18", features = ["swizzle"] }
env_logger = "0.11"
log = "0.4"
wgpu = "24.0"
crevice = { version = "0.18.0", features = ["cgmath"] }
futures = "0.3"
anyhow = "1.0"
bytemuck = { version = "1.21", features = ["derive"] }
rayon = "1.10"
half = { version = "2.4", features = ["num-traits", "bytemuck"] }

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.3"
glob = "0.3"
shaderc = "0.8"

[profile.release]
lto = true