[package]
name = "wenderer"
version = "0.5.2"
authors = ["feng liang <feng.liang@kaust.edu.sa>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25"
winit = { version = "0.30", features = ["rwh_05"] }
cgmath = { version = "0.18", features = ["swizzle"] }
env_logger = "0.11"
wgpu = "25.0"
crevice = { version = "0.18.0", features = ["cgmath"] }
futures = "0.3"
anyhow = "1.0"
bytemuck = { version = "1.22", features = ["derive"] }
rayon = "1.10"
half = { version = "2.6", features = ["num-traits", "bytemuck"] }

[profile.release]
lto = true